--- a/conference-room/package.json
+++ b/conference-room/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "element-plus": "^2.11.5",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
