--- a/conference-room-admin/package.json
+++ b/conference-room-admin/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "element-plus": "^2.11.5",
+    "js-cookie": "^3.0.5",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
