--- a/conference-room/package.json
+++ b/conference-room/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "element-plus": "^2.11.5",
+    "js-cookie": "^3.0.5",
+    "qrcode": "^1.5.4",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
